# rust-cli

./: Cargo.toml
src/: main.rs  workspaces.rs
