[package]
name = "dep-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs_extra="1.2.0"
rayon = "1.0"
glob = "0.3.0"
subprocess = "0.2.9"
